--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,10 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/samlaihei"
+      
+atom_feed:
+  hide: true
+
 
 defaults:
   # _posts
