--- a/_config.yml
+++ b/_config.yml
@@ -110,3 +110,10 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+  
+analytics:
+  provider: "google"
+  google:
+    tracking_id: "G-7X80MLGVWX"
+    anonymize_ip: false # default
+
