--- a/_config.yml
+++ b/_config.yml
@@ -112,8 +112,8 @@ tag_archive:
   path: /tags/
   
 analytics:
-  provider: "google-gtag"
+  provider               : "google-universal" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id: "G-7X80MLGVWX"
-    anonymize_ip: false # default
+    tracking_id          : "G-7X80MLGVWX" # Replace this with your ID, or delete
+    anonymize_ip         : false
 
