--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ tag_archive:
   path: /tags/
   
 analytics:
-  provider               : "google-universal" # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : "G-7X80MLGVWX" # Replace this with your ID, or delete
     anonymize_ip         : false
