--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Samuel Lai
 masthead_title: "Samuel Lai - Astronomy"
+logo: "/assets/images/masthead_logo.png"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Personal website
