--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/samlaihei"
     - label: "Google Scholar"
-      icon: "fab fa-fw fa-graduation-cap"
+      icon: "fab fa-fw fa-google-scholar"
       url: "https://scholar.google.com/citations?hl=en&user=cUAUnsIAAAAJ"
 
 footer:
