--- a/_config.yml
+++ b/_config.yml
@@ -59,13 +59,13 @@ plugins:
 author:
   name             : "Samuel Lai"
   avatar           : "/assets/images/avatar.jpeg"
-  bio              : "Astrophysics PhD Candidate at Australian National University"
-  location         : "Canberra, Australia"
+  bio              : "Astrophysics Postdoctoral Researcher at CSIRO"
+  location         : "Kensington, Western Australia"
   email            : 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:samuel.lai(at)anu.edu.au"
+      url: "mailto:samuel.lai(at)csiro.au"
     - label: "Orcid"
       icon: "fab fa-fw fa-orcid"
       url: "https://orcid.org/0000-0001-9372-4611"
