--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ footer:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:samuel.lai(at)anu.edu.au"
+      url: "mailto:samuel.lai(at)csiro.au"
     - label: "Orcid"
       icon: "fab fa-fw fa-orcid"
       url: "https://orcid.org/0000-0001-9372-4611"
